chore: add dependency on videojs-vr.

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "Player"
   ],
   "author": "ayamir",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "videojs-vr": "^1.8.0"
+  }
 }
