--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "VR Video Player Demo",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,5 +13,8 @@
     "Player"
   ],
   "author": "ayamir",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "videojs-vr": "^1.8.0"
+  }
 }
